--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openerp (6.1-1zaber) testing; urgency=low
+
+  * Branch maintained by Zaber.
+
+ -- Don Kirkby <donkirkby+launpd@gmail.com>  Wed, 29 Aug 2012 16:42:00 -0700
+
 openerp (6.1-1) testing; urgency=low
 
   * New major version, new packaging.
